--- a/app/views/basicbot/new.html.erb
+++ b/app/views/basicbot/new.html.erb
@@ -11,13 +11,11 @@
       </div>
       <div class="form-group">
         <label for="formGroupExampleInput2">Page ID</label>
-        <%= form.text_field :page_id, class: "form-control", placeholder: "Name" %>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Page ID">
+        <%= form.text_field :page_id, class: "form-control", placeholder: "Page ID" %>
       </div>
       <div class="form-group">
         <label for="formGroupExampleInput2">Access Token</label>
-        <%= form.text_field :access_token, class: "form-control", placeholder: "Name" %>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Access Token">
+        <%= form.text_field :access_token, class: "form-control", placeholder: "Access Token" %>
       </div>
       <div class="form-group row">
         <div class="offset-sm-2 col-sm-10">
